GLANSCAN-SPROKKEL78
-------------------

NOTES:
-----

CHANGELOG
---------

# glanscan-sprokkel78 1.0.3
- added ctrl-q and ctrl-m for quiting and minimizing the app.
- changed startup resolution to 800x400px

# glanscan-sprokkel78 1.0.2
- scanning networks and host now requires root permissions.
- added exapandable scrolled window and option to go fullscreen.

# glanscan-sprokkel78 1.0.1
- proof of concept.