@@ -24,7 +24,7 @@ entry_host = Gtk.Entry()
 entry_iprange = Gtk.Entry()
 button_ipscan = Gtk.Button(label="IP-Scan")
 button_ipscan_stop = Gtk.Button(label="Stop")
-statusbar = Gtk.Statusbar()
+statusbar = Gtk.Label(label="")
 
 
 # STARTUP CHECKS
@@ -78,7 +78,7 @@ class MyThread(threading.Thread):
             txt = ""
             txt = txt + "\n\tScan Report: \n"
 
-            status = subprocess.Popen("/usr/bin/pkexec /usr/bin/nmap -P " + iprange + " | grep report | cut -d\" \" -f5,6",
+            status = subprocess.Popen("/usr/bin/pkexec /usr/bin/nmap -P " + iprange + " | grep -E 'report|open'",
                                           shell=True, stdout=subprocess.PIPE,
                                           stderr=subprocess.PIPE, universal_newlines=True)
             rcstat = status.wait()
@@ -87,13 +87,14 @@ class MyThread(threading.Thread):
             x = 0
             while (x < len(txt_split)):
                 txt = txt + "\n\t" + txt_split[x]
-                x = x + 1
+                if "report" in txt_split[x]:
+                    x = x + 1
 
             txt = txt + "\n\tHosts Up: " + str(x - 1) + "\n"
             GLib.idle_add(tbuffer.set_text, txt)
 
         print("Thread stopped.")
-        statusbar.push(0, "Done.")
+        statusbar.set_text("  Done.")
         entry_iprange.set_sensitive(1)
         button_ipscan.set_sensitive(1)
         sleep(3)
@@ -103,7 +104,7 @@ def stop_thread(thread):
     global thread_started
     thread.stop()
     thread_started = False
-    statusbar.push(0, "Stopping the scan ..., please wait.")
+    statusbar.set_text("  Stopping the scan ..., please wait.")
     button_ipscan_stop.set_sensitive(0)
 
 
@@ -117,7 +118,7 @@ def scan_lan(obj):
 
         tbuffer.set_text("\n\tScanning ..., please wait.")
         button_ipscan_stop.set_sensitive(1)
-        statusbar.push(0, "Scanning the IP-range ..., please wait.")
+        statusbar.set_text("  Scanning the IP-range ..., please wait.")
 
 
         def start_thread():
@@ -281,7 +282,8 @@ class MyApp(Adw.Application):
         global statusbar
         box2.append(statusbar)
 
-        statusbar.push(0, "Ready.")
+        statusbar.set_halign(Gtk.Align.START)
+        statusbar.set_text("  Ready.")
         tbuffer.set_text("\n\tEnter an IP-range to start a scan.")
 
         win.present()
