@@ -10,6 +10,7 @@ CHANGELOG
 # glanscan-sprokkel78 1.0.3
 - added ctrl-q and ctrl-m for quiting and minimizing the app.
 - changed startup resolution to 800x400px
+- changed statusbar push events to label.
 
 # glanscan-sprokkel78 1.0.2
 - scanning networks and host now requires root permissions.
